--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
+    "@tinymce/tinymce-react": "^3.12.3",
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
